# freeze

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  REAME.md
src/: CMakeLists.txt
src/freezer/: CMakeLists.txt  freezer.cc  freezer.h  operation.cc  operation.h  test.cc
src/mrfreeze/: CMakeLists.txt  main.cc
src/plugin/: CMakeLists.txt  plugin.cc  plugin.h
